# mmv

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  LICENSE_NOTICE.md  NOTICE  QUICKSTART.md  README.md  THIRD_PARTY_LICENSES.md  TRY_MOBIUS.md  conftest.py  eval_query_set_v1.md  install.py  live_verify_test.py  manifest.txt  pyproject.toml  requirements.txt
benchmarks/: __init__.py  qk_benchmark.py  qk_benchmark_v2.py  qk_evaluate.py  qk_evaluate_v2.py  run_120b.py  run_deepseek_scaling.py  run_gemma4_26b_eval.py  run_gemma4_e4b.py  run_llama70b.py  run_llama_scaling.py  run_local_add.py  run_moe_eval.py  run_phi4_14b_retry.py  run_qwen3_rl.py  run_qwen_scaling.py  run_qwen_thinking.py  run_qwen_thinking_v2.py  run_small_models.py  run_suite.py
config/: referential_patterns.json  wiki_index_source.yaml
docs/: 03_constitutional_core_spec.md  03b_route_decision_table.md  03c_verify_semantics.md  05_session_state_schema.md  05b_retrieval_policy.md  06_response_style_guide.md  08_api_types.md  09_eval_protocol.md  10_release_notes_v7_4_8_mmv.md  6_DAYS_AGO_QUALITY_COMPARISON.md  AI_as_Handlungsunwert_Foundations_DRAFT_v0_1.md  BENCHMARKS.md  BENCHMARK_RUNBOOK.md  BOX_NAMESPACE.md  COMPLETION_REPORT_PHASE_2_20260426.md  COMPLETION_REPORT_PHASE_3_20260427.md  COMPLETION_REPORT_PHASE_3_STABILIZED_20260427.md  DATASET_TRILINGUAL_INVENTORY.md  EMBEDDING_RULE.md  ENGINE_FIX_RESULTS.md  FACTUAL_INTEGRATION_C3_FIX_20260424.md  FUTURE_WORK_ZH.md  GROQ_403_DIAGNOSTIC_NOTE.md  HF_WIKI_DATASET_README_TEMPLATE.md  HONEST_BASELINE_20260424.md  INDEX_DISTRIBUTION_POLICY.md  ISM_CORPUS_DISTRIBUTION_POLICY.md  L0_ESSENTIALS_V1_3_UPDATE_NOTE.md  L0_V8_3_SUPERSEDED_NOTE.md  L0_V8_4_AUDIT_REINTEGRATION_NOTE.md  L0_V8_4_RC3_3_SYNC_NOTE.md  L0_v8_4_1_ABSTAIN_VALIDATION.md  LIBRARY_INSPECTOR_USER_GUIDE.md  MMV_CORE_FREEZE_POLICY.md  MMV_CORE_V0_1_RC1_RELEASE_NOTES.md  NEXT_SESSION_PRIMARY_GOAL.md  P9_EVIDENCE_PACK_V1_FOR_PAPER.md  P9_EVIDENCE_PACK_V1_GROQ120B_JUDGE_NOTE.md  P9_EVIDENCE_PACK_V1_JUDGE_REPAIR_NOTE.md  P9_EVIDENCE_PACK_V1_REPORT.md  (+50 more)
eval/: demo_scenarios.md  prompts.json
operate-fr-bench/: CITATION.cff  LICENSE  NON_ASSERTION_COVENANT.md  README.md  pyproject.toml
operate-fr-bench/backups/rc32_clean/: README.md  mmv_rc32_120b.jsonl  mmv_rc32_120b_summary.json  model_profiles.example.yaml.snapshot
operate-fr-bench/backups/rc32_clean_20260516/: README.md  mmv_rc32_120b_report.md
operate-fr-bench/configs/: model_profiles.example.yaml  suite_core500.yaml  suite_smoke.yaml
operate-fr-bench/docs/: CORE500_CANDIDATE_PROTOCOL_20260521.md  MMV_Large_RC3_3_FREEZE_NOTE.md  MMV_Medium_RC3_3_FREEZE_NOTE.md  MMV_Small_RC3_3_FREEZE_NOTE.md  PAPER.md  RELEASE_TAG_COMMANDS_MMV_LARGE_RC3_3.md  RELEASE_TAG_COMMANDS_MMV_SMALL_RC3_3.md  adjudication_rules.md  annotation_guide.md  route_taxonomy.md  runbook.md
operate-fr-bench/harness/: __init__.py  adapters.py  classify_route.py  report.py  route_transformer.py  run_eval.py  schemas.py  score.py  small_routing_stabilizer.py
operate-fr-bench/releases/large/: current.yaml
operate-fr-bench/releases/medium/: current.yaml
operate-fr-bench/releases/small/: current.yaml
operate-fr-bench/scripts/: build_core500_candidate_audit_packet.py  build_core500_from_smoke100.py
operate-fr-bench/tests/: test_route_classifier.py  test_route_transformer.py  test_route_transformer_120b.py  test_schema.py  test_scoring.py  test_small_rc3_3_v1_1_query_neutrality.py  test_small_routing_stabilizer.py  test_smoke_dry_run.py  test_v3_1_freshness_refuse.py
prompts/: l0_integrated_v8_2.md  l0_integrated_v8_4.md  mobius_l0_v8_2_protocol.json  mobius_l0_v8_4_protocol.json
scripts/: audit_pattern_library.py  build_ism_index.py  build_pattern_index.py  build_wiki_index.py  calibrate_threshold.py  check_box0_l0_authority.py  check_current_overview_and_math.py  check_identity_leakage.py  check_mmv_essentials_scope.py  classify_metric5_failures.py  compare_calibration.py  compare_models.py  compare_raw_vs_mmv.py  compare_raw_vs_mmv_gemma4.py  compare_three_way.py  extract_questions.py  fetch_wiki_index.py  generate_qk_minority.py  golden_set_eval.py  golden_set_expand.py  measure_qk_effectiveness.py  merge_qk_results.py  migrate_subtopic_p4c3.py  paired_analysis_operate_fr.py  paired_route_transitions.py  phase3_stab_final_verify.py  phase4_autodriver.sh  phase4_autodriver_helpers.py  phase4_autodriver_notify.sh  (+20 more)
(+472 files in other folders)
