# MOBIUS MMV — minimum packaging for reproducible install.
# Added per Drift D9 resolution (pre-freeze critical fixes, 2026-04-23).
# See Evolution Log cyc_20260423_pre_freeze_critical_fixes.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobius-mmv"
version = "0.8.2-preview"
description = "MOBIUS MMV — local-first conversational AI runtime implementing Answer Entitlement Architecture (L0 Protocol v8.4)."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Taiko Toeda / MOBIUS LLC", email = "info@mobius.style" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies identified from src/ imports. Keeps the list minimal;
# unpinned to allow environment-level resolution. Optional/dev tooling lives
# under [project.optional-dependencies].
dependencies = [
    # HTTP clients for external APIs (Brave, Groq, Ollama).
    "requests>=2.31",
    "httpx>=0.27",

    # Environment loading.
    "python-dotenv>=1.0",

    # Retrieval / embeddings.
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "transformers>=4.40",
    "numpy>=1.26",

    # Language detection (language_policy.py fallback path).
    "langdetect>=1.0.9",

    # Corpus indexing and watching.
    "watchdog>=4.0",

    # Document extraction (custom_rag_adapter).
    "pypdf>=4.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",

    # OpenAI-compatible HTTP API (src/app/api.py).
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# Test & development tooling. Install with: pip install -e .[dev]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# UI (src/ui/app.py uses Gradio). Keep optional so headless deployments
# do not pull it.
ui = [
    "gradio>=4.0",
]

# Evaluation tooling (eval/rl_bench). These deps overlap with the main
# runtime but are listed explicitly so an eval-only install is possible.
eval = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/mobius-style/mmv"
Documentation = "https://github.com/mobius-style/mmv"

# ── Tooling configuration ─────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Reproduces the CLAUDE.md-documented invariant: tests/ with eval excluded.
# eval/ tests have heavier external dependencies (live retrieval, LLM judge);
# they are not part of the unit-level suite.
testpaths = ["tests"]
# `importlib` import mode is required so that `from eval.rl_bench...` works
# from within test modules without shadowing by pytest's default `prepend`
# mode (which inserts each test's parent dir and can hide top-level packages
# whose name collides with Python builtins, e.g. the `eval` package here).
addopts = "-q --tb=short --ignore=tests/eval --import-mode=importlib"
xfail_strict = false
